# guicalculator

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/guicalculator/: __init__.py  __main__.py  buttoncfg.py  calculatordata.py  globals.py  guicalculator.py  supportfuncs.py
src/guicalculator/calculator/: __init__.py  calculatordata.py  evaluate_calculation.py  logwrapper.py  numtostr.py  strtodecimal.py  supportfuncs.py  validate_user_var.py
src/guicalculator/globals/: __init__.py  buttoninfo.py  constants.py  enums.py  functionstype.py  types.py
src/guicalculator/gui/: __init__.py  btndispfrm.py  calcfrm.py  calcstyle.py  guicalculator.py  memdispfrm.py  uservarseditfrm.py  varspopup.py  (+3 more)
tests/: __init__.py  test_calculatordata.py  test_evaluate_calculation.py  test_logwrapper.py  test_numtostr.py  test_strtodecimal.py  test_supportfuncs.py  test_validate_user_var.py
tests/calculatordata/: __init__.py  test__setup_calculatordata.py  test_backspace.py  test_button_press.py  test_calculate.py  test_clear_all.py  test_clear_value.py  test_get_current_display_calc.py  test_get_current_eval_calc.py  test_get_current_input.py  test_get_current_memory.py  test_get_num_fnc_sym.py  test_get_user_variable_names.py  test_get_user_variables.py  test_inverse_number.py  test_invert_sign.py  test_memory_add.py  test_memory_clear.py  test_memory_recall.py  test_memory_store.py  test_memory_swap.py  test_negate.py  test_process_button.py  test_root_number.py  test_set_user_variables.py  test_square_number.py  test_update_current_calc.py  test_validate_symbol_and_func.py
(+30 files in other folders)
